# langchain_playground

./: README.md
food_qna_on_device/: .gitignore  README.md  build_knowledge_base.py  config.py  main.py  pyproject.toml
food_qna_on_device/food_qna_on_device/: utils.py
food_qna_on_device/vector_db/: index.faiss  index.pkl
