[tool.poetry]
name = "food-qna-on-device"
version = "0.1.0"
description = ""
authors = ["bearbearyu1223 <bearbearyu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ctransformers = "^0.2.5"
faiss-cpu = "1.7.4"
fastapi = "^0.96.0"
ipykernel = "^6.23.1"
langchain = "0.0.225"
sentence-transformers = "2.2.2"
uvicorn = "^0.22.0"
torch = ">=2.0.0, !=2.0.1"
openai = "^0.27.8"
pypdf = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
